--- a/cur/Cursos.html
+++ b/cur/Cursos.html
@@ -3,7 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursos - CGPVP</title>
+
+    <!-- SEO y datos estructurados para Google -->
+    <title>Cursos | Capacitación en Emergencias y Atención Prehospitalaria - CGPVP</title>
+    <meta name="description" content="Descubre nuestros cursos certificados de paramedicina, primeros auxilios, rescate y gestión de emergencias. Modalidades presencial y virtual en el Perú.">
+    <meta property="og:title" content="Cursos | Cuerpo General de Paramédicos Voluntarios del Perú - CGPVP">
+    <meta property="og:description" content="Formación profesional certificada en emergencias y atención prehospitalaria. Modalidades presencial y virtual.">
+    <meta property="og:url" content="https://paramedicosdelperu.org/cur/Cursos.html">
+    <meta property="og:type" content="website">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "NGO",
+      "name": "Cuerpo General de Paramédicos del Perú",
+      "alternateName": "CGPVP",
+      "url": "https://paramedicosdelperu.org",
+      "logo": "https://paramedicosdelperu.org/logo.png",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+51-929285669",
+        "contactType": "emergency service",
+        "areaServed": "PE",
+        "availableLanguage": "Spanish"
+      },
+      "description": "Asociación sin fines de lucro dedicada a la formación y capacitación de personal voluntario para atención de emergencias y rescate en el Perú.",
+      "sameAs": [
+        "https://www.facebook.com/paramedicos.pe",
+        "https://www.tiktok.com/@paramedicos.pe/video/7371679537878404358",
+        "https://www.linkedin.com/in/param%C3%A9dicos-del-per%C3%BA-324795203/"
+      ]
+    }
+    </script>
+    <!-- Fin SEO -->
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="cursosstyle.css">
     <link rel="stylesheet" href="cursos-stylebody.css">
