--- a/ins/Instructores.html
+++ b/ins/Instructores.html
@@ -3,7 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instructores - CGPVP</title>
+
+    <!-- SEO y datos estructurados para Google -->
+    <title>Instructores | Equipo de Formación del Cuerpo General de Paramédicos del Perú - CGPVP</title>
+    <meta name="description" content="Conoce a nuestro equipo de instructores certificados internacionalmente en emergencias, rescate y atención prehospitalaria del CGPVP.">
+    <meta property="og:title" content="Instructores | Cuerpo General de Paramédicos Voluntarios del Perú - CGPVP">
+    <meta property="og:description" content="Profesionales certificados comprometidos con la excelencia en formación de emergencias y rescate en el Perú.">
+    <meta property="og:url" content="https://paramedicosdelperu.org/ins/Instructores.html">
+    <meta property="og:type" content="website">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "NGO",
+      "name": "Cuerpo General de Paramédicos del Perú",
+      "alternateName": "CGPVP",
+      "url": "https://paramedicosdelperu.org",
+      "logo": "https://paramedicosdelperu.org/logo.png",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+51-929285669",
+        "contactType": "emergency service",
+        "areaServed": "PE",
+        "availableLanguage": "Spanish"
+      },
+      "description": "Asociación sin fines de lucro dedicada a la formación y capacitación de personal voluntario para atención de emergencias y rescate en el Perú.",
+      "sameAs": [
+        "https://www.facebook.com/paramedicos.pe",
+        "https://www.tiktok.com/@paramedicos.pe/video/7371679537878404358",
+        "https://www.linkedin.com/in/param%C3%A9dicos-del-per%C3%BA-324795203/"
+      ]
+    }
+    </script>
+    <!-- Fin SEO -->
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="instructoresstyle.css">
     <link rel="stylesheet" href="instructores-stylebody.css">
@@ -270,7 +302,7 @@
           </div>
 
                 <p class="footer-copyright">
-                    Cuerpo General de Paramédicos Voluntarios del Perú © 2025.<br>
+                    Cuerpo General de Paramédicos Voluntarios del Perú © 2026.<br>
                     Todos los derechos reservados                                                           
                 </p>
                 <p class="footer-copyright">
