--- a/index.html
+++ b/index.html
@@ -3,7 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal CGPVP - Noticias</title>
+
+    <!-- SEO y datos estructurados para Google -->
+    <title>Cuerpo General de Paramédicos del Perú | CGPVP Oficial</title>
+    <meta name="description" content="Organización dedicada a la capacitación, rescate y atención pre-hospitalaria en el Perú. Formamos equipos de primera respuesta ante desastres y emergencias.">
+    <meta property="og:title" content="Cuerpo General de Paramédicos del Perú">
+    <meta property="og:description" content="Especialistas en atención de emergencias, primeros auxilios y gestión de riesgos de desastres.">
+    <meta property="og:url" content="https://paramedicosdelperu.org">
+    <meta property="og:type" content="website">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "NGO",
+      "name": "Cuerpo General de Paramédicos del Perú",
+      "alternateName": "CGPVP",
+      "url": "https://paramedicosdelperu.org",
+      "logo": "https://paramedicosdelperu.org/logo.png",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+51-929285669",
+        "contactType": "emergency service",
+        "areaServed": "PE",
+        "availableLanguage": "Spanish"
+      },
+      "description": "Asociación sin fines de lucro dedicada a la formación y capacitación de personal voluntario para atención de emergencias y rescate en el Perú.",
+      "sameAs": [
+        "https://www.facebook.com/paramedicos.pe",
+        "https://www.tiktok.com/@paramedicos.pe/video/7371679537878404358",
+        "https://www.linkedin.com/in/param%C3%A9dicos-del-per%C3%BA-324795203/"
+      ]
+    }
+    </script>
+    <!-- Fin SEO -->
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="indexstyle.css">
     <link rel="stylesheet" href="not/buscar-miembros.css">
