cambios de ejecutivo

--- a/Panel_adm/admin-panel.html
+++ b/Panel_adm/admin-panel.html
@@ -116,12 +116,6 @@
             <div class="section-header">
                 <h2>Dashboard General</h2>
                 <div class="header-actions">
-                    <select class="select-period">
-                        <option value="hoy">Hoy</option>
-                        <option value="semana">Esta Semana</option>
-                        <option value="mes" selected>Este Mes</option>
-                        <option value="año">Este Año</option>
-                    </select>
                     <button class="btn-refresh">
                         <i class="fas fa-sync-alt"></i>
                     </button>
@@ -138,7 +132,7 @@
                             </div>
                             <div class="kpi-content">
                                 <div class="kpi-value">0</div>
-                                <h3>Total Inscritos</h3>
+                                <h3>Total Miembros Actuales</h3>
                             </div>
                         </div>
                     </div>
@@ -2633,6 +2627,7 @@
     <script src="eventos-api.js"></script>
     <script src="noticias-api.js"></script>
     <script src="admin-perfil-api.js"></script>
+    <script src="reportes-api.js"></script>
 
     <!-- ── Estilos extra: cards de reportes ── -->
     <style>
